Transferring getAll logic from the controller to the core
